# macroquest

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  build_comment_update.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_release_shared.yaml  ci_shared.yaml
cmake/: vcpkg_manifest.cmake
contrib/vcpkg-overlays/cmake/crashpad-backtrace/: 0001-Add-buildflags-header.patch  crashpadConfig.cmake.in  portfile.cmake  vcpkg.json
contrib/vcpkg-overlays/cmake/curl-84/: 0002_fix_uwp.patch  0005_remove_imp_suffix.patch  0012-fix-dependency-idn2.patch  0020-fix-pc-file.patch  0022-deduplicate-libs.patch  cmake-config.patch  cmake-project-include.cmake  dependencies.patch  export-components.patch  mbedtls-ws2_32.patch  mq-rename-84.patch  portfile.cmake  usage  vcpkg-cmake-wrapper.cmake  vcpkg.json
contrib/vcpkg-overlays/cmake/detours/: detours-config.cmake.in  find-jmp-bounds-arm64.patch  portfile.cmake  usage  vcpkg.json
contrib/vcpkg-overlays/cmake/luajit/: 005-do-not-pass-ld-e-macosx.patch  Makefile.nmake  configure  luajit-config.cmake.in  luajit.pc  portfile.cmake  vcpkg.json
contrib/vcpkg-overlays/triplets/: x64-windows-static.cmake  x86-windows-static.cmake
contrib/vcpkg-ports/crashpad/: crashpadConfig.cmake.in  portfile.cmake
data/resources/: CHANGELOG.md  ItemDB.txt
docs/: FUTURE-CI.md  SECRETS.md  SETUP.md  WORKFLOW.md
include/mq/base/: BuildInfo.h
lua/: tlo_exercise.lua
src/: MacroQuest.sln
src/imgui/: CMakeLists.txt
src/imgui/imanim/: im_anim_usecase.cpp
src/loader/: MacroQuest.cpp  PostOffice.cpp  ProcessList.cpp
src/loader/imgui_backend/: imgui_impl_dx11.h
src/login/: Companies.h
src/main/: CMakeLists.txt  GraphicsEngine.cpp  ImGuiBackend.h  ImGuiManager.cpp  MQ2AutoInventory.cpp  MQ2ChatHook.cpp  MQ2DeveloperTools.cpp  MQ2Globals.cpp  MQ2Globals.h  MQ2Inlines.h  MQ2Main.vcxproj  MQ2Main.vcxproj.filters  MQ2Pulse.cpp  MQ2Spells.cpp  MQ2Utilities.cpp  MQ2WindowInspector.cpp  MQDetourAPI.cpp  MQImGuiConsole.cpp  MQMemDump.README.md  MQMemDump.cpp  MacroQuest.cpp
src/main/datatypes/: MQ2CharacterType.cpp  MQ2ItemType.cpp  MQ2PointMerchantType.cpp  MQ2SpawnType.cpp  MQ2WindowType.cpp
src/plugins/MQ2CF/: CMakeLists.txt  MQ2CF.cpp  vcpkg.json  vcpkg_mq.txt
src/plugins/MQ2CF/core/: AAEngine.cpp  AAEngine.h  BuffEngine.cpp  BuffEngine.h  BuffTracker.cpp  BuffTracker.h  Camp.cpp  Camp.h  CastEngine.cpp  CastEngine.h  EventBus.cpp  EventBus.h  GemManager.cpp  GemManager.h  GroupEngine.cpp  GroupEngine.h  Humanize.cpp  Humanize.h  ImGuiWindow.cpp  ImGuiWindow.h  Lifecycle.cpp  Lifecycle.h  LocalPlayer.cpp  LocalPlayer.h  LuaBindings.cpp  LuaBindings.h  ModeSystem.cpp  ModeSystem.h  SchemaInit.cpp  SchemaInit.h  Settings.cpp  Settings.h  SpawnPrimitives.cpp  SpawnPrimitives.h  SpellData.cpp  SpellData.h  SpellScan.cpp  SpellScan.h  TargetValidation.cpp  TargetValidation.h
src/plugins/MQ2CF/data/: schema.sql
src/plugins/MQ2CF/docs/: api_reference.md
src/plugins/MQ2CF/lua/: cleric.lua  spell_dump.lua  test_harness.lua
src/plugins/MQ2DumpItem/: MQ2DumpItem.cpp  MQ2DumpItem.vcxproj  README.md
src/plugins/MQ2EQBC/: .gitignore  .gitmodules  MQ2EQBC.cpp  MQ2EQBC.rc  MQ2EQBC.vcxproj  MQ2EQBC.vcxproj.filters
src/plugins/MQ2EQBC/docs/: .meta.yml  cmd-bc.md  cmd-bca.md  cmd-bcaa.md  cmd-bcclear.md  cmd-bccmd.md  cmd-bcfont.md  cmd-bcg.md  cmd-bcga.md  cmd-bcmin.md  cmd-bcsa.md  cmd-bcsaa.md  cmd-bcsg.md  cmd-bcsga.md  cmd-bcst.md  cmd-bct.md  datatype-eqbc.md  index.md  tlo-eqbc.md
src/plugins/MQ2EQBC/server/: CHANGELOG.md  CMakeLists.txt  EQBCS.cpp  EQBCS.rc  EQBCS.sln  EQBCS.vcxproj  EQBCS.vcxproj.filters  README.md  resource.h  version.h
src/plugins/MQ2EQBC/server/contrib/: mqstring_stub.h
src/plugins/MQ2FieldWatch/: MQ2FieldWatch.cpp  MQ2FieldWatch.vcxproj
src/plugins/MQ2MoveUtils/: MQ2MoveUtils.cpp  MQ2MoveUtils.vcxproj
src/plugins/MQ2TakeADump/: README.md
src/plugins/MQ2Twist/: MQ2Twist.vcxproj
src/plugins/MQMCPServer/: CMakeLists.txt  MQMCPServer.cpp  MQMCPServer.vcxproj  httplib.h  vcpkg.json
src/plugins/autologin/: MQ2AutoLogin.cpp  MQ2AutoLogin.h
src/plugins/chatwnd/: MQ2ChatWnd.cpp
src/plugins/eqbugfix/: MQ2EQBugFix.cpp
src/plugins/lua/: MQ2Lua.cpp
src/plugins/lua/lua/examples/imanim_usecases/: cards_and_content.lua
src/plugins/targetinfo/: MQ2TargetInfo.cpp
src/plugins/xtarinfo/: MQ2XTarInfo.cpp
src/routing/: Network.cpp
tools/build-tools/: README.md
tools/build-tools/MQBuild/: MQBuild.psd1  MQBuild.psm1  mqbuild.ps1
tools/build-tools/MQBuild/Private/: Config.ps1  Get-MQDLLList.ps1  Invoke-MQSSHCommand.ps1  Write-MQLog.ps1
tools/build-tools/MQBuild/Public/: Get-MQBuildStatus.ps1  Invoke-MQBuild.ps1  Invoke-MQCommentUpdate.ps1  Invoke-MQDeploy.ps1  Promote-MQBranch.ps1  Switch-MQBranch.ps1  Sync-MQWintest.ps1
tools/build-tools/MQBuild/tui/: Show-MQMenu.ps1
tools/comment-update/: comment-update.config
tools/playerclient-pad-generator/: README.md  pad_generator.py
